Tuning the photo upload experience & fix to progress bar being too long

--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -705,9 +705,6 @@ div.bar-container{
     box-sizing:border-box;
 }
 div.bar-container .bar{
-    position:absolute;
-    top:3px;
-    left:3px;
     background-color:#75ceeb;
     height:20px;
     z-index: 1;
